<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="48dp"
        android:text="Crear una cuenta"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtdni"
        app:layout_constraintEnd_toEndOf="@+id/txtdni"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtdni"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/valDni"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtfullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtfullname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/valNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtclave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdni" />

    <EditText
        android:id="@+id/txtclave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/valClave"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtclavex2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfullname" />

    <EditText
        android:id="@+id/txtclavex2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/valClavex2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtclave" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="243dp"
        android:text="@string/valRegistrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtclavex2" />
</androidx.constraintlayout.widget.ConstraintLayout>