<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/txtDNI"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/txtDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/valDni"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtCLAVE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtCLAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/valClave"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnIngreso"
        app:layout_constraintStart_toStartOf="@+id/txtDNI"
        app:layout_constraintTop_toBottomOf="@+id/txtDNI" />

    <Button
        android:id="@+id/btnIngreso"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/valIngreso"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCLAVE" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="168dp"
        android:text="@string/valRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngreso" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="26dp"
        android:text="Iniciar Sesion"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>